# python-setup

./: pyproject.toml  setup.cfg
